
classDiagram
    class Game {
        -board: Board
        -snake: Snake
        -food: Food
        +__init__() None
        +run() None
    }
    class Board {
        -width: int
        -height: int
        +__init__(width: int, height: int) None
        +draw() None
    }
    class Snake {
        -x: int
        -y: int
        -direction: str
        -length: int
        +__init__(x: int, y: int) None
        +move() None
        +grow() None
    }
    class Food {
        -x: int
        -y: int
        +__init__() None
        +generate() None
    }
    Game --> Board
    Game --> Snake
    Game --> Food
    Snake --> Board